--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2 class="modalHeading">!أنتبه</h2>
       <span>لا تفتح اي رابط قبل ما تتأكد, ترا مو كل شي امن وممكن تعرض بياناتك للخطر</span>
       <p class="modalText"></p>
-      <a href="https://x.com/TechNationClubb">احضر معنا ملتقى سلوكك هو مستقبلك</a>
+      <a href="https://x.com/technationclubb/status/1911309488478372267">احضر معنا ملتقى سلوكك هو مستقبلك</a>
     </div>
   </body>
   
